--- a/assets/styles/components.css
+++ b/assets/styles/components.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Felipa&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -5,7 +6,7 @@
 
 header {
     display: flex;
-    justify-content: space-between;
+    width: 100%;
 }
 
 .logo {
@@ -20,11 +21,12 @@ header {
     border-radius: 50%;
 }
 
-h1 {
+.site_name {
     display: flex;
     margin: 1em 0;
     padding: 0;
     font-size: 3em;
+    font-family: 'Dancing Script', cursive;
 }
 
 .red {
@@ -47,11 +49,13 @@ h1 {
     display: flex;
     flex-direction: column;
     height: 7em;
-    padding: 3%;
-    border-radius: 50%;
     align-items: center;
     border: 1px solid #000;
     background-color: #133F1F;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
 }
 
 #burger {
@@ -75,8 +79,11 @@ h1 {
     padding: 10px;
 }
 
-#navbar a {
+a {
     text-decoration: none;
+}
+
+#navbar a {
     color: #fff;
     font-size: 1.5em;
     font-family: Arial, Helvetica, sans-serif;
