--- a/assets/styles/components.css
+++ b/assets/styles/components.css
@@ -50,11 +50,12 @@ header {
     flex-direction: column;
     height: 7em;
     align-items: center;
+    border-radius: 50%;
     border: 1px solid #000;
     background-color: #133F1F;
     position: fixed;
-    top: 0;
-    right: 0;
+    top: 10px;
+    right: 1.5em;
     z-index: 1;
 }
 
@@ -112,6 +113,8 @@ a {
         width: 60%;
         border-radius: 0 0 1em 30em;
         padding: 0;
+        right: 0;
+        top: 0;
     }
 
     #navbar {
