starting services page

--- a/assets/styles/components.css
+++ b/assets/styles/components.css
@@ -7,17 +7,17 @@
 header {
     display: flex;
     width: 100%;
+    justify-content: space-between;
 }
 
 .logo {
     display: flex;
-    padding: 1em;
+    padding: 1em 0 0 1em;
 }
 
 .logo img {
-    width: 65px;
-    height: 65px;
-    border: 2px solid #000;
+    width: 200px;
+    height:100px;
     border-radius: 50%;
 }
 
@@ -45,7 +45,7 @@ header {
     color: #E1AD01;
 }
 
-.nav {
+#nav {
     display: flex;
     flex-direction: column;
     height: 7em;
@@ -53,9 +53,6 @@ header {
     border-radius: 50%;
     border: 1px solid #000;
     background-color: #133F1F;
-    position: fixed;
-    top: 10px;
-    right: 1.5em;
     z-index: 1;
 }
 
@@ -109,7 +106,7 @@ a {
         display: none;
     }
 
-    .nav {
+    #nav {
         width: 60%;
         border-radius: 0 0 1em 30em;
         padding: 0;
